hphp/hack/test/typecheck/inout/bad_inout_decl_special_call.php
<?hh

class C {
  public function __call($name, inout $arguments) {
    $arguments = array();
    return null;
  }
}
